# ai-agent-webapp-oss

./: .env.example  .gitignore  Makefile  README.md  environment.env.example  pyproject.toml  requirements.txt
app/: http_redirect.py  models.py  web_app_server.py
app/agent/: bedrock_agent.py
app/mcp/: mcp_transport_client.py
app/storage/: chat_store.py
app/tools/: web_tools.py
nginx/: local.conf.template  uvicorn.log.config.json
scripts/: start_with_nginx.sh  stop_with_nginx.sh
static/: app.js  index.html
