[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-webapp"
version = "0.1.0"
description = "PoC browser chat app using AWS Bedrock and MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.30.6",
  "httpx>=0.27.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["static*"]

[tool.uvicorn]
app = "app.web_app_server:app"
host = "0.0.0.0"
port = 3000
reload = true
